# NLP

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  spell_checker.py
src/nlp_lab/dataio/: loader.py
src/nlp_lab/models/: baselines.py  transformer.py
src/nlp_lab/preprocessing/: text.py
src/nlp_lab/training/: cli.py  eval.py  train.py
src/nlp_lab/utils/: config.py  logging.py
tests/: test_cli.py  test_dataio.py  test_models.py  test_preprocessing.py
