[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlp-lab"
version = "0.1.0"
description = "Reproducible NLP pipeline with dataset unification, baselines, and transformers"
readme = "README.md"
authors = [{ name = "NLP Lab" }]
requires-python = ">=3.10"
dependencies = [
	"numpy>=1.23",
	"pandas>=2.0",
	"pyarrow>=14.0",
	"scikit-learn>=1.3",
	"transformers>=4.40",
	"datasets>=2.16",
	"torch>=2.1; platform_system!='Darwin' or platform_machine!='arm64'",
	"tokenizers>=0.15",
	"tqdm>=4.66",
	"emoji>=2.8",
	"regex>=2023.10.3",
	"langdetect>=1.0.9",
	"python-dotenv>=1.0",
	"typer>=0.9",
	"pydantic-settings>=2.2",
	"joblib>=1.3",
]

[project.optional-dependencies]
dev = [
	"ruff>=0.5",
	"black>=24.4",
	"isort>=5.13",
	"mypy>=1.10",
	"pytest>=8.2",
	"pytest-cov>=5.0",
	"hypothesis>=6.100",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
src = ["src"]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
exclude = ["notebooks/", "models/"]

[tool.mypy."nlp_lab.*"]
strict = true